src/objects/LeadToCallFileRule__c.object
<CustomObject>
    <description>Store the rules for distributing different call file to the lead</description>
    <fields>
        <fullName>Call_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Call file that the rule is corresponding to</description>
        <label>Call File</label>
        <referenceTo>vhc__Campaign__c</referenceTo>
        <relationshipLabel>LeadToCallFileRules</relationshipLabel>
        <relationshipName>LeadToCallFileRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delay_To_Call_File_Days__c</fullName>
        <label>Delay To Call File Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_Closed_And_Lost__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Exclude the leads that status is closed or lost</description>
        <label>Exclude Closed And Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Converted_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Exclude the leads that is already converted</description>
        <label>Exclude Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Do_Not_Call__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Exclude all the leads that tagged as do not call</description>
        <label>Exclude Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Do_Not_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Exclude the leads that tagged as do not email</description>
        <label>Exclude Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the current rule is active or not</description>
        <label>Is Active Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Priority to check will rule should be fitted first when assign the call file to the lead</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <description>Rule Description</description>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Rule Name</description>
        <externalId>true</externalId>
        <label>Rule Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rule_Object__c</fullName>
        <label>Rule Object</label>
        <picklist>
            <picklistValues>
                <fullName>opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LeadToCallFileRule</label>
    <nameField>
        <label>LeadToCallFileRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadToCallFileRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>